--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -46,7 +46,7 @@ jobs:
           server: ${{ secrets.SFTP_HOST }}
           username: ${{ secrets.SFTP_USER }}
           password: ${{ secrets.SFTP_PASS }}
-          server-dir: /home/seusite.com/backend/
+          server-dir: /home1/isacag00/isacaguiar.com.br
           local-dir: expense/backend-php/
 
 
