--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -10,6 +10,7 @@ jobs:
   laravel-deploy:
     name: Build Laravel app (backend-php)
     runs-on: ubuntu-latest
+    environment: PROD
     defaults:
       run:
         working-directory: backend-php
