--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -11,9 +11,6 @@ jobs:
     name: Build Laravel app (backend-php)
     runs-on: ubuntu-latest
     environment: PROD
-    defaults:
-      run:
-        working-directory: backend-php
 
     steps:
       - name: 📥 Clonar o repositório
@@ -27,46 +24,45 @@ jobs:
           coverage: none
 
       - name: 📦 Instalar dependências
-        run: composer install --no-dev --optimize-autoloader
+        run: cd expense/backend-php && composer install --no-dev --optimize-autoloader
+        #run: composer install --no-dev --optimize-autoloader
 
       - name: 🔐 Gerar arquivo .env
         run: |
-          echo "APP_NAME=SCD" > .env
-          echo "APP_ENV=production" >> .env
-          echo "APP_KEY=${{ secrets.ENV_APP_KEY }}" >> .env
-          echo "APP_DEBUG=false" >> .env
-          echo "APP_URL=https://scd.novemax.com.br" >> .env
+          echo "APP_NAME=SCD" > expense/backend-php/.env
+          echo "APP_ENV=production" >> expense/backend-php/.env
+          echo "APP_KEY=${{ secrets.ENV_APP_KEY }}" >> expense/backend-php/.env
+          echo "APP_DEBUG=false" >> expense/backend-php/.env
+          echo "APP_URL=https://scd.novemax.com.br" >> expense/backend-php/.env
 
-          echo "DB_CONNECTION=mysql" >> .env
-          echo "DB_HOST=${{ secrets.ENV_DB_HOST }}" >> .env
-          echo "DB_PORT=3306" >> .env
-          echo "DB_DATABASE=${{ secrets.ENV_DB_DATABASE }}" >> .env
-          echo "DB_USERNAME=${{ secrets.ENV_DB_USERNAME }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.ENV_DB_PASSWORD }}" >> .env
+          echo "DB_CONNECTION=mysql" >> expense/backend-php/.env
+          echo "DB_HOST=${{ secrets.ENV_DB_HOST }}" >> expense/backend-php/.env
+          echo "DB_PORT=3306" >> expense/backend-php/.env
+          echo "DB_DATABASE=${{ secrets.ENV_DB_DATABASE }}" >> expense/backend-php/.env
+          echo "DB_USERNAME=${{ secrets.ENV_DB_USERNAME }}" >> expense/backend-php/.env
+          echo "DB_PASSWORD=${{ secrets.ENV_DB_PASSWORD }}" >> expense/backend-php/.env
 
-          echo "MAIL_MAILER=smtp" >> .env
-          echo "MAIL_HOST=${{ secrets.ENV_MAIL_HOST }}" >> .env
-          echo "MAIL_PORT=587" >> .env
-          echo "MAIL_USERNAME=${{ secrets.ENV_MAIL_USERNAME }}" >> .env
-          echo "MAIL_PASSWORD=${{ secrets.ENV_MAIL_PASSWORD }}" >> .env
-          echo "MAIL_ENCRYPTION=tls" >> .env
-          echo "MAIL_FROM_ADDRESS=no-reply@scd.novemax.com.br" >> .env
-          echo "MAIL_FROM_NAME=\"SCD Novemax\"" >> .env
+          echo "MAIL_MAILER=smtp" >> expense/backend-php/.env
+          echo "MAIL_HOST=${{ secrets.ENV_MAIL_HOST }}" >> expense/backend-php/.env
+          echo "MAIL_PORT=587" >> expense/backend-php/.env
+          echo "MAIL_USERNAME=${{ secrets.ENV_MAIL_USERNAME }}" >> expense/backend-php/.env
+          echo "MAIL_PASSWORD=${{ secrets.ENV_MAIL_PASSWORD }}" >> expense/backend-php/.env
+          echo "MAIL_ENCRYPTION=tls" >> expense/backend-php/.env
+          echo "MAIL_FROM_ADDRESS=no-reply@scd.novemax.com.br" >> expense/backend-php/.env
+          echo "MAIL_FROM_NAME=\"SCD Novemax\"" >> expense/backend-php/.env
 
-          echo "JWT_SECRET=${{ secrets.ENV_JWT_KEY }}" >> .env
-          echo "PIX_KEY=${{ secrets.ENV_PIX_KEY }}" >> .env
+          echo "JWT_SECRET=${{ secrets.ENV_JWT_KEY }}" >> expense/backend-php/.env
+          echo "PIX_KEY=${{ secrets.ENV_PIX_KEY }}" >> expense/backend-php/.env
 
       - name: 🔑 Gerar chave do aplicativo
-        run: php artisan key:generate
+        run: cd expense/backend-php && php artisan key:generate #php artisan key:generate
 
       - name: 🧠 Gerar caches Laravel
         run: |
+          cd expense/backend-php
           php artisan config:cache
           php artisan route:cache
           php artisan view:cache
-
-      - name: 🔍 Verificar valor do host (temporário)
-        run: echo "Deploy para ${{ secrets.SFTP_HOST }}"
 
       - name: 🚀 Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
@@ -74,8 +70,8 @@ jobs:
           server: ${{ secrets.SFTP_HOST }}
           username: ${{ secrets.SFTP_USER }}
           password: ${{ secrets.SFTP_PASS }}
-          server-dir: /home1/isacag00/isacaguiar.com.br/
-          local-dir: ./
+          server-dir: /
+          local-dir: expense/backend-php/
 
 
 
