--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -27,42 +27,42 @@ jobs:
         run: pwd
 
       - name: 📦 Instalar dependências
-        run: cd expense/backend-php && composer install --no-dev --optimize-autoloader
-        #run: composer install --no-dev --optimize-autoloader
+        run: composer install --no-dev --optimize-autoloader
+        working-directory: backend-php
 
       - name: 🔐 Gerar arquivo .env
         run: |
-          echo "APP_NAME=SCD" > expense/backend-php/.env
-          echo "APP_ENV=production" >> expense/backend-php/.env
-          echo "APP_KEY=${{ secrets.ENV_APP_KEY }}" >> expense/backend-php/.env
-          echo "APP_DEBUG=false" >> expense/backend-php/.env
-          echo "APP_URL=https://scd.novemax.com.br" >> expense/backend-php/.env
+          echo "APP_NAME=SCD" > backend-php/.env
+          echo "APP_ENV=production" >> backend-php/.env
+          echo "APP_KEY=${{ secrets.ENV_APP_KEY }}" >> backend-php/.env
+          echo "APP_DEBUG=false" >> backend-php/.env
+          echo "APP_URL=https://scd.novemax.com.br" >> backend-php/.env
 
-          echo "DB_CONNECTION=mysql" >> expense/backend-php/.env
-          echo "DB_HOST=${{ secrets.ENV_DB_HOST }}" >> expense/backend-php/.env
-          echo "DB_PORT=3306" >> expense/backend-php/.env
-          echo "DB_DATABASE=${{ secrets.ENV_DB_DATABASE }}" >> expense/backend-php/.env
-          echo "DB_USERNAME=${{ secrets.ENV_DB_USERNAME }}" >> expense/backend-php/.env
-          echo "DB_PASSWORD=${{ secrets.ENV_DB_PASSWORD }}" >> expense/backend-php/.env
+          echo "DB_CONNECTION=mysql" >> backend-php/.env
+          echo "DB_HOST=${{ secrets.ENV_DB_HOST }}" >> backend-php/.env
+          echo "DB_PORT=3306" >> backend-php/.env
+          echo "DB_DATABASE=${{ secrets.ENV_DB_DATABASE }}" >> backend-php/.env
+          echo "DB_USERNAME=${{ secrets.ENV_DB_USERNAME }}" >> backend-php/.env
+          echo "DB_PASSWORD=${{ secrets.ENV_DB_PASSWORD }}" >> backend-php/.env
 
-          echo "MAIL_MAILER=smtp" >> expense/backend-php/.env
-          echo "MAIL_HOST=${{ secrets.ENV_MAIL_HOST }}" >> expense/backend-php/.env
-          echo "MAIL_PORT=587" >> expense/backend-php/.env
-          echo "MAIL_USERNAME=${{ secrets.ENV_MAIL_USERNAME }}" >> expense/backend-php/.env
-          echo "MAIL_PASSWORD=${{ secrets.ENV_MAIL_PASSWORD }}" >> expense/backend-php/.env
-          echo "MAIL_ENCRYPTION=tls" >> expense/backend-php/.env
-          echo "MAIL_FROM_ADDRESS=no-reply@scd.novemax.com.br" >> expense/backend-php/.env
-          echo "MAIL_FROM_NAME=\"SCD Novemax\"" >> expense/backend-php/.env
+          echo "MAIL_MAILER=smtp" >> backend-php/.env
+          echo "MAIL_HOST=${{ secrets.ENV_MAIL_HOST }}" >> backend-php/.env
+          echo "MAIL_PORT=587" >> backend-php/.env
+          echo "MAIL_USERNAME=${{ secrets.ENV_MAIL_USERNAME }}" >> backend-php/.env
+          echo "MAIL_PASSWORD=${{ secrets.ENV_MAIL_PASSWORD }}" >> backend-php/.env
+          echo "MAIL_ENCRYPTION=tls" >> backend-php/.env
+          echo "MAIL_FROM_ADDRESS=no-reply@scd.novemax.com.br" >> backend-php/.env
+          echo "MAIL_FROM_NAME=\"SCD Novemax\"" >> backend-php/.env
 
-          echo "JWT_SECRET=${{ secrets.ENV_JWT_KEY }}" >> expense/backend-php/.env
-          echo "PIX_KEY=${{ secrets.ENV_PIX_KEY }}" >> expense/backend-php/.env
+          echo "JWT_SECRET=${{ secrets.ENV_JWT_KEY }}" >> backend-php/.env
+          echo "PIX_KEY=${{ secrets.ENV_PIX_KEY }}" >> backend-php/.env
 
       - name: 🔑 Gerar chave do aplicativo
-        run: cd expense/backend-php && php artisan key:generate #php artisan key:generate
+        run: cd backend-php && php artisan key:generate #php artisan key:generate
 
       - name: 🧠 Gerar caches Laravel
         run: |
-          cd expense/backend-php
+          cd backend-php
           php artisan config:cache
           php artisan route:cache
           php artisan view:cache
